--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewAmountCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewAmountCell.xib
@@ -11,20 +11,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="KYMWithdrewAmountCell" id="gTV-IL-0wX" customClass="KYMWithdrewAmountCell">
-            <rect key="frame" x="0.0" y="0.0" width="346" height="128"/>
+            <rect key="frame" x="0.0" y="0.0" width="346" height="158"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="346" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="346" height="158"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款金额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCX-IP-fMt">
-                        <rect key="frame" x="15.5" y="13.5" width="60" height="21"/>
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="IVQ-Ve-Tkc"/>
+                            <constraint firstAttribute="width" constant="60" id="zEz-PQ-nhC"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="15"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="WQ5-Y7-1tE">
-                        <rect key="frame" x="87" y="0.0" width="231" height="128"/>
+                        <rect key="frame" x="0.0" y="21" width="346" height="137"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CQ7-3x-Yas">
                             <size key="itemSize" width="128" height="128"/>
@@ -34,33 +38,33 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hzw-lD-bjw">
-                        <rect key="frame" x="0.0" y="127" width="346" height="1"/>
-                        <color key="backgroundColor" red="0.30196078431372547" green="0.30196078431372547" blue="0.41568627450980389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="0.0" y="157.5" width="346" height="0.5"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="cEk-KH-RaO"/>
+                            <constraint firstAttribute="height" constant="0.5" id="cEk-KH-RaO"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
-            <color key="backgroundColor" red="0.16078431372549018" green="0.1764705882352941" blue="0.21176470588235294" alpha="0.52000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="WQ5-Y7-1tE" secondAttribute="bottom" id="2F3-3a-Hxl"/>
-                <constraint firstItem="WQ5-Y7-1tE" firstAttribute="leading" secondItem="rCX-IP-fMt" secondAttribute="trailing" constant="11.5" id="B75-dW-FbY"/>
-                <constraint firstAttribute="trailing" secondItem="WQ5-Y7-1tE" secondAttribute="trailing" constant="28" id="Fgo-km-fmd"/>
+                <constraint firstAttribute="trailing" secondItem="WQ5-Y7-1tE" secondAttribute="trailing" id="Fgo-km-fmd"/>
                 <constraint firstAttribute="bottom" secondItem="Hzw-lD-bjw" secondAttribute="bottom" id="M9B-yD-Ft8"/>
                 <constraint firstAttribute="trailing" secondItem="Hzw-lD-bjw" secondAttribute="trailing" id="Npn-Ao-T61"/>
-                <constraint firstItem="WQ5-Y7-1tE" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="SZj-9F-d7Q"/>
-                <constraint firstItem="rCX-IP-fMt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15.5" id="n78-f1-hdf"/>
+                <constraint firstItem="WQ5-Y7-1tE" firstAttribute="top" secondItem="rCX-IP-fMt" secondAttribute="bottom" id="SZj-9F-d7Q"/>
+                <constraint firstItem="WQ5-Y7-1tE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fZP-rm-dPx"/>
+                <constraint firstItem="rCX-IP-fMt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="n78-f1-hdf"/>
                 <constraint firstItem="Hzw-lD-bjw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rIo-9U-Juc"/>
-                <constraint firstItem="rCX-IP-fMt" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="13.5" id="vJ9-yx-QJj"/>
+                <constraint firstItem="rCX-IP-fMt" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vJ9-yx-QJj"/>
             </constraints>
-            <size key="customSize" width="346" height="128"/>
+            <size key="customSize" width="346" height="158"/>
             <connections>
                 <outlet property="collectionView" destination="WQ5-Y7-1tE" id="21v-K1-LyA"/>
                 <outlet property="lineHeight" destination="cEk-KH-RaO" id="Aco-Mw-L9C"/>
             </connections>
-            <point key="canvasLocation" x="246.37681159420291" y="103.79464285714285"/>
+            <point key="canvasLocation" x="246.37681159420291" y="113.83928571428571"/>
         </collectionViewCell>
     </objects>
 </document>
