--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMWithdrawConfirmVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMWithdrawConfirmVC.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E7m-Lb-XQc">
-                    <rect key="frame" x="0.0" y="362" width="414" height="500"/>
+                    <rect key="frame" x="0.0" y="242" width="414" height="620"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提现金额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iHY-qN-306">
                             <rect key="frame" x="171" y="18" width="72" height="26"/>
@@ -49,7 +48,7 @@
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dLx-WQ-BMP">
                             <rect key="frame" x="0.0" y="66" width="414" height="0.5"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <color key="tintColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="0c7-Bn-ARs"/>
@@ -97,7 +96,7 @@
                         <constraint firstItem="Jos-vH-sx4" firstAttribute="top" secondItem="wq7-Bo-f04" secondAttribute="bottom" constant="5" id="gEP-ST-EIT"/>
                         <constraint firstItem="iHY-qN-306" firstAttribute="top" secondItem="E7m-Lb-XQc" secondAttribute="top" constant="18" id="iFB-Ue-mcj"/>
                         <constraint firstItem="wq7-Bo-f04" firstAttribute="leading" secondItem="E7m-Lb-XQc" secondAttribute="leading" constant="30" id="jh6-w9-tGr"/>
-                        <constraint firstAttribute="height" constant="500" id="kwr-Hy-jwj"/>
+                        <constraint firstAttribute="height" constant="620" id="kwr-Hy-jwj"/>
                         <constraint firstItem="Jos-vH-sx4" firstAttribute="leading" secondItem="E7m-Lb-XQc" secondAttribute="leading" constant="30" id="oRi-Ns-l7F"/>
                     </constraints>
                 </view>
@@ -114,8 +113,5 @@
     </objects>
     <resources>
         <image name="mwd_Cancel" width="18" height="18"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
