--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeCNYEditView.xib
@@ -36,8 +36,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AdS-ha-nqn">
-                    <rect key="frame" x="0.0" y="70" width="414" height="0.5"/>
-                    <color key="backgroundColor" white="1" alpha="0.29864083899999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="12" y="70" width="390" height="0.5"/>
+                    <color key="backgroundColor" red="0.42745098039215684" green="0.46666666666666667" blue="0.54509803921568623" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="0.5" id="7N6-N5-7Sx"/>
                     </constraints>
@@ -65,7 +65,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="切换" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Egc-ZA-96q">
-                    <rect key="frame" x="349" y="28" width="29" height="17"/>
+                    <rect key="frame" x="357" y="28" width="29" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.42745098039215684" green="0.46666666666666667" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -164,7 +164,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这里是提示文字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJI-mQ-Zht">
-                    <rect key="frame" x="15" y="75.5" width="363" height="20"/>
+                    <rect key="frame" x="15" y="75.5" width="371" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="fdA-qN-wRf"/>
                     </constraints>
@@ -189,16 +189,16 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="9sI-aL-Ark" secondAttribute="trailing" id="14U-pr-uqU"/>
                 <constraint firstItem="AdS-ha-nqn" firstAttribute="top" secondItem="9sI-aL-Ark" secondAttribute="bottom" id="1PR-XB-Hcy"/>
                 <constraint firstItem="uJI-mQ-Zht" firstAttribute="leading" secondItem="1pQ-IK-tsW" secondAttribute="leading" constant="3" id="2dZ-8F-CO7"/>
                 <constraint firstItem="ZoM-2s-QMT" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="4tX-Fv-arA"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="7n2-cA-Z9u"/>
-                <constraint firstItem="AdS-ha-nqn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="8v9-MN-1or"/>
                 <constraint firstItem="1pQ-IK-tsW" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="Aff-MS-X64"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="AyK-W6-RC9"/>
                 <constraint firstItem="ZoM-2s-QMT" firstAttribute="top" secondItem="Zc7-TC-fEF" secondAttribute="bottom" constant="5" id="EaS-3U-3Sh"/>
-                <constraint firstItem="AdS-ha-nqn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EgN-DA-lXL"/>
                 <constraint firstItem="uJI-mQ-Zht" firstAttribute="trailing" secondItem="Egc-ZA-96q" secondAttribute="trailing" id="GI3-PS-FG0"/>
+                <constraint firstAttribute="trailing" secondItem="AdS-ha-nqn" secondAttribute="trailing" constant="12" id="IYg-bN-Zrp"/>
                 <constraint firstItem="9sI-aL-Ark" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="LBq-tP-Ryu"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="leading" secondItem="Zc7-TC-fEF" secondAttribute="leading" id="NNZ-Yl-8lV"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="trailing" secondItem="Zc7-TC-fEF" secondAttribute="trailing" id="NV0-3a-G5W"/>
@@ -208,19 +208,19 @@
                 <constraint firstItem="1pQ-IK-tsW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="12" id="TT9-rr-C1v"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="OxX-xe-jFh" secondAttribute="trailing" constant="14" id="TYi-H1-Xtr"/>
                 <constraint firstItem="7fs-A6-rb7" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="XFq-PW-F6C"/>
+                <constraint firstItem="AdS-ha-nqn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="12" id="XNy-NL-aSF"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="leading" secondItem="OxX-xe-jFh" secondAttribute="leading" id="ZXV-r6-82p"/>
                 <constraint firstItem="Egc-ZA-96q" firstAttribute="centerY" secondItem="RwZ-pY-ihD" secondAttribute="centerY" id="ahq-93-2Rc"/>
                 <constraint firstItem="7fs-A6-rb7" firstAttribute="leading" secondItem="RwZ-pY-ihD" secondAttribute="trailing" constant="8" id="ane-nL-Of5"/>
                 <constraint firstItem="SCp-Gt-sFU" firstAttribute="top" secondItem="NQW-EM-t1q" secondAttribute="bottom" id="bAv-Ur-MRV"/>
                 <constraint firstItem="uJI-mQ-Zht" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="5" id="cuj-Zm-Whi"/>
-                <constraint firstItem="ke3-PS-Vi3" firstAttribute="leading" secondItem="Egc-ZA-96q" secondAttribute="trailing" constant="15" id="dYQ-bU-AVu"/>
+                <constraint firstItem="ke3-PS-Vi3" firstAttribute="leading" secondItem="Egc-ZA-96q" secondAttribute="trailing" constant="7" id="dYQ-bU-AVu"/>
                 <constraint firstAttribute="trailing" secondItem="ke3-PS-Vi3" secondAttribute="trailing" constant="16" id="dkb-tE-APk"/>
                 <constraint firstItem="Zc7-TC-fEF" firstAttribute="top" secondItem="2Cf-84-UbO" secondAttribute="bottom" id="elA-IO-ezJ"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="top" secondItem="OxX-xe-jFh" secondAttribute="bottom" id="iwS-nQ-tQV"/>
                 <constraint firstItem="SCp-Gt-sFU" firstAttribute="trailing" secondItem="NQW-EM-t1q" secondAttribute="trailing" id="js7-Tk-eed"/>
                 <constraint firstItem="SCp-Gt-sFU" firstAttribute="leading" secondItem="NQW-EM-t1q" secondAttribute="leading" id="kV8-mu-PnD"/>
                 <constraint firstItem="2Cf-84-UbO" firstAttribute="trailing" secondItem="OxX-xe-jFh" secondAttribute="trailing" id="s52-OQ-OaX"/>
-                <constraint firstItem="AdS-ha-nqn" firstAttribute="trailing" secondItem="9sI-aL-Ark" secondAttribute="trailing" id="uWg-fq-Y7E"/>
                 <constraint firstItem="OxX-xe-jFh" firstAttribute="top" secondItem="AdS-ha-nqn" secondAttribute="bottom" constant="40" id="w5S-uh-gWV"/>
                 <constraint firstItem="ke3-PS-Vi3" firstAttribute="centerY" secondItem="Egc-ZA-96q" secondAttribute="centerY" id="w5b-2D-6D8"/>
                 <constraint firstItem="NQW-EM-t1q" firstAttribute="top" secondItem="Zc7-TC-fEF" secondAttribute="bottom" constant="9" id="xqa-bo-kqM"/>
