--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMWithdrawConfirmVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMWithdrawConfirmVC.xib
@@ -70,8 +70,8 @@
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m2G-PS-OKU">
-                                            <rect key="frame" x="140" y="56" width="16" height="16"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mwd_rmb" translatesAutoresizingMaskIntoConstraints="NO" id="m2G-PS-OKU">
+                                            <rect key="frame" x="140" y="57" width="16" height="16"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="16" id="W68-Rj-Vdx"/>
                                                 <constraint firstAttribute="width" constant="16" id="XPW-WT-7KV"/>
@@ -81,7 +81,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="Jos-vH-sx4" firstAttribute="leading" secondItem="o1b-G8-6QW" secondAttribute="leading" constant="30" id="37L-w2-bi6"/>
-                                        <constraint firstItem="m2G-PS-OKU" firstAttribute="bottom" secondItem="Jos-vH-sx4" secondAttribute="bottom" constant="-10" id="9x3-oq-puK"/>
+                                        <constraint firstItem="m2G-PS-OKU" firstAttribute="bottom" secondItem="Jos-vH-sx4" secondAttribute="bottom" constant="-9" id="9x3-oq-puK"/>
                                         <constraint firstItem="wq7-Bo-f04" firstAttribute="top" secondItem="o1b-G8-6QW" secondAttribute="top" constant="14" id="ARG-no-hsH"/>
                                         <constraint firstItem="Jos-vH-sx4" firstAttribute="top" secondItem="wq7-Bo-f04" secondAttribute="bottom" constant="5" id="DoT-YN-G0z"/>
                                         <constraint firstItem="wq7-Bo-f04" firstAttribute="leading" secondItem="o1b-G8-6QW" secondAttribute="leading" constant="30" id="KHl-fG-pMY"/>
@@ -140,5 +140,6 @@
     </objects>
     <resources>
         <image name="mwd_Cancel" width="18" height="18"/>
+        <image name="mwd_rmb" width="16" height="17"/>
     </resources>
 </document>
