--- a/HYNewNest/Features(主代码)/VIPComponent/VIPHome/Controller/HYVIPViewController.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPHome/Controller/HYVIPViewController.xib
@@ -398,7 +398,7 @@
                                     <color key="textColor" white="1" alpha="0.80319148936170215" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBv-DD-giv">
+                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBv-DD-giv">
                                     <rect key="frame" x="271" y="100.5" width="79" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="jBv-DD-giv" secondAttribute="height" multiplier="79:20" id="OO0-JN-9o5"/>
