--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMFastPayStatusVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMFastPayStatusVC.xib
@@ -48,6 +48,7 @@
                 <outlet property="tip4Lb" destination="uWI-FZ-aHs" id="Lmp-1L-crM"/>
                 <outlet property="tip5Lb" destination="6Ay-NR-gzG" id="mdc-hk-Gy6"/>
                 <outlet property="tip5LbH" destination="M4x-kV-TDH" id="A1z-kh-ccs"/>
+                <outlet property="tipCopyView" destination="0sN-ul-yZr" id="Qe8-2Y-y5m"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outletCollection property="statusLbs" destination="BPK-At-03i" id="DkO-oy-dRh"/>
                 <outletCollection property="statusLbs" destination="hq7-JJ-CCj" id="ih0-WR-syg"/>
@@ -70,6 +71,11 @@
                 <outletCollection property="deleteBtnArr" destination="1Du-78-qd3" id="LOB-qK-MRz"/>
                 <outletCollection property="deleteBtnArr" destination="a2r-Bf-USU" id="LHW-Rx-oSj"/>
                 <outletCollection property="deleteBtnArr" destination="zBW-bj-QNZ" id="Ntg-Uy-Lay"/>
+                <outletCollection property="btnCopyArray" destination="h3M-hr-fSt" id="jrL-B3-kLK"/>
+                <outletCollection property="btnCopyArray" destination="8nb-xM-wLp" id="yYV-Ra-15L"/>
+                <outletCollection property="btnCopyArray" destination="xYQ-Dh-MqM" id="dvJ-G6-0tm"/>
+                <outletCollection property="btnCopyArray" destination="own-Ch-4RG" id="gl1-BA-FvP"/>
+                <outletCollection property="btnCopyArray" destination="5Wy-Qx-2ir" id="XRH-g1-2LB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -301,33 +307,34 @@
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="按" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuR-JO-ZSF">
-                                                            <rect key="frame" x="279" y="15" width="14" height="20"/>
-                                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                                            <color key="textColor" red="0.50588235290000005" green="0.52941176469999995" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="copy" translatesAutoresizingMaskIntoConstraints="NO" id="SvD-kp-JY8">
-                                                            <rect key="frame" x="296" y="16.5" width="14" height="17"/>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="复制信息" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4if-Of-Kab">
-                                                            <rect key="frame" x="313" y="15" width="56" height="20"/>
-                                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                                            <color key="textColor" red="0.50588235290000005" green="0.52941176469999995" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="0sN-ul-yZr">
+                                                            <rect key="frame" x="279" y="15" width="90" height="20"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="按" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuR-JO-ZSF">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="14" height="20"/>
+                                                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                                                    <color key="textColor" red="0.50588235290000005" green="0.52941176469999995" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="copy" translatesAutoresizingMaskIntoConstraints="NO" id="SvD-kp-JY8">
+                                                                    <rect key="frame" x="17" y="0.0" width="14" height="20"/>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="复制信息" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4if-Of-Kab">
+                                                                    <rect key="frame" x="34" y="0.0" width="56" height="20"/>
+                                                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                                                    <color key="textColor" red="0.50588235290000005" green="0.52941176469999995" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="4if-Of-Kab" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="0Oc-fu-jx8"/>
-                                                        <constraint firstAttribute="trailing" secondItem="4if-Of-Kab" secondAttribute="trailing" constant="15" id="1jV-Bi-HFE"/>
                                                         <constraint firstItem="1F0-JF-YfW" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="2mk-wP-97U"/>
-                                                        <constraint firstItem="4if-Of-Kab" firstAttribute="leading" secondItem="SvD-kp-JY8" secondAttribute="trailing" constant="3" id="4dc-XB-Oi7"/>
-                                                        <constraint firstItem="TuR-JO-ZSF" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="8ad-Sv-tfp"/>
-                                                        <constraint firstItem="SvD-kp-JY8" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="Ki3-Kl-Ata"/>
-                                                        <constraint firstItem="SvD-kp-JY8" firstAttribute="leading" secondItem="TuR-JO-ZSF" secondAttribute="trailing" constant="3" id="Ubw-AN-05r"/>
+                                                        <constraint firstAttribute="trailing" secondItem="0sN-ul-yZr" secondAttribute="trailing" constant="15" id="ZHl-gQ-7LS"/>
                                                         <constraint firstItem="aN7-ka-cHi" firstAttribute="leading" secondItem="Oth-ev-Gx5" secondAttribute="leading" constant="15" id="czk-QL-PgW"/>
                                                         <constraint firstItem="1F0-JF-YfW" firstAttribute="leading" secondItem="aN7-ka-cHi" secondAttribute="trailing" constant="6" id="dBQ-1Q-cVJ"/>
+                                                        <constraint firstItem="0sN-ul-yZr" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="ht8-2B-kBr"/>
                                                         <constraint firstItem="aN7-ka-cHi" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="q3U-SK-MvI"/>
                                                     </constraints>
                                                 </view>
